fixtext overflow

--- a/styles/base.css
+++ b/styles/base.css
@@ -50,7 +50,6 @@ nav a:hover {
 }
 .temple-name p {
   font-family: Courgette;
-  font-size: 1.5rem;
 }
 #burger {
   width: 49px;
@@ -157,6 +156,9 @@ footer p {
   }
   .hero {
     grid-column: 1/3  ;
+  }
+  .temple-name p {
+     font-size: 2rem;
   }
   nav ul{
     flex-direction: row;
